# opengl1

./: CMakeLists.txt
OpenGL/include/GLFW/: glfw3.h
OpenGL/include/glad/: glad.h
OpenGL/include/glm/doc/: man.doxy
OpenGL/include/glm/doc/api/: a00047_source.html
OpenGL/include/glm/glm/detail/: _features.hpp  setup.hpp
OpenGL/include/glm/glm/gtx/: matrix_decompose.hpp
OpenGL/include/glm/glm/simd/: platform.h
OpenGL/include/stb/: stb_image.h
assets/: fragment_core.glsl  fragment_core2.glsl  lamp.fs  object.fs  object.fs.glsl  object.vs  object.vs.glsl  vertex_core.glsl
lib/: glad.c  stb.cpp
src/: Shader.cpp  Shader.h  main.cpp
src/graphics/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/graphics/models/: Cube.hpp  Lamp.hpp
src/io/: Camera.cpp  Camera.h  Joystick.cpp  Joystick.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Screen.cpp  Screen.h
src/shader/: Shader.cpp  Shader.h
